fix: Files.readAllBytes() 대신 Files.readString() 사용하여 코드 개선